# seer

./: .Dockerignore  .cursorignore  .env.example  .gitignore  DATABASE.md  DOCKER_SETUP.md  Dockerfile  QUICKSTART_TORTOISE_ORM.md  README.md  Simulation Evaluating Vertex wo debugging.txt  __init__.py  aerich.ini  deployment-config.json  docker-compose.yml  init_db.py  langgraph.json  mcp.json  pyproject.toml  railway.json  requirements.txt  run.py  seer.code-workspace  setup.sh  test_a2a.py
.cursor/rules/: seer-default.mdc
agents/: __init__.py  combined_graphs.json
agents/buggy-coder/: README.md  langgraph.json  pyproject.toml
agents/buggy-coder/src/: __init__.py  graph.py  state.py
agents/codex/: __init__.py  common_instructions.py  format_thread.py  graph.py  langgraph.json  sample.json  sample_input.json  state.py  test.py  utils.py
agents/coding_agent/: graph.py  langgraph.json
agents/customer_success/: __init__.py  eventbus_bridge.py  graph.py  langgraph.json
agents/eval_agent/: __init__.py  constants.py  deps.py  eventbus_bridge.py  graph.py  graph_v2.py  langgraph.json  models.py  prompts.py  reflection_store.py  reflexion_factory.py  requirements.txt  server.py  simplified_graph.py  state_store.py  supervisor.py  supervisor_state.py  utils.py
agents/eval_run/: __init__.py  assert_state.py  clean_mcp_resources.py  graph.py  invoke_target.py  prepare_result.py  provision_env.py  seed_mcp_resources.py  utils.py  verify_provisioning.py
agents/orchestrator/: __init__.py  agent_registry.py  data_manager.py  graph.py  langgraph.json  simplified_graph.py
agents/pg_helper/: graph.py  state.py
agents/reflexion/: README.md  __init__.py  graph.py  langgraph.json  mem0_client.py  memory_artifacts.py  models.py  pinecone_client.py  prompts.py
agents/reflexion_websearch/: graph.py  langgraph.json
agents/supervisor/: __init__.py  config.py  generic_worker.py  graph.py  supervisor.py
agents/workflow_agent/: __init__.py  agent.py  context.py  schema_context.py  utils.py  validation.py
api/: __init__.py  graphs.py  main.py  models.py  router.py
api/agents/: checkpointer.py  graphs.py  routes.py  traces.py
api/composio/: __init__.py  router.py  services.py
api/datasets/: router.py  services.py
api/integrations/: oauth.py  resource_browser.py  router.py  services.py
api/middleware/: auth.py
api/models/: __init__.py  router.py  schema.py
api/projects/: models.py  router.py  services.py
api/tools/: __init__.py  router.py  services.py
api/traces/: models.py  router.py  services.py
api/triggers/: services.py
api/webhooks/: router.py
api/workflows/: __init__.py  alias_utils.py  chat_agent.py  chat_schema.py  executor.py  graph_builder.py  models.py  nodes.py  pr_sync.py  router.py  schema.py  services.py  state.py  test_function_blocks.py  test_validation.py
cli/: __init__.py  main.py
data/: seer.db
docs/archive/: PHASE2_MIGRATION.md  PHASE2_SUMMARY.md
evals/: judge.py  local.py
event_bus/: __init__.py  client.py  schemas.py  server.py
examples/: github_asana_bot.ipynb
experiments/e10--planning-length-impact/: EXPERIMENT.md  e10_reasoning_effort.py  requirements.txt
experiments/e11--codex-plan-reasoning-effort/: README.md  SUMMARY.md  e11_codex_plan_reasoning_effort.py  generate_visualizations.py
experiments/e12--self-improving-agent/: EXPERIMENT.md  README.md  e12_self_improving_agent_standalone.py
experiments/e13--guardrail-learning/: EXPERIMENT.md  e13.py  inputs.json  results.json
experiments/e14--codex-vs-reflexion-coding-benchmark/: EXPERIMENT.md  humaneval_tasks.json  results_final.json  run_experiment.py
experiments/e16--active-observability/: README.md  experimental_designs.py  run_experiment.py  smart_trace_logic.py
experiments/e16a--active-observability-humaneval/: EXPERIMENT.md  humaneval_task.json  run_experiment.py  smart_trace_logic.py
experiments/e16b--active-observability-composio/: EXPERIMENT.md  models.py  requirements.txt  run_benchmark.py
experiments/e8--EA-react-vs-reflexion/: e8--react-vs-reflexion-eval-agent.py  experiments.md  requirements.txt
experiments/e9c--end-to-end/: e9c_end_to_end.py  experiment.md  results.json  run_all_levels.sh
experiments/hypothesis: LLMs can devise inverse tool actions for cleanup/: asana_tools_dump.json  dump_asana_tools.py  experiment_results.md  llm_inverse_detection.py  llm_inverse_detection_results.json  validation_table.txt
experiments/investigate_cleanup_failure/: INVESTIGATION_REPORT.md  extract_test_structure.py  verify_output_structure.py
graph_db/: __init__.py  client.py  constants.py
indexer/: __init__.py  db.py  embedding.py  service.py
infra/: __init__.py  checkpointer.py
issues/: parameter-population-issue.md
migrations/: 001_init_schema.sql  001_make_user_id_nullable.sql  002_add_chat_tables.sql
migrations/models/: 0_20251224183735_init.py  0_20251231183307_init.py  1_20251226152702_proposal.py  1_20260101180211_polling.py
orchestrator/: __init__.py  agent_registry.py  data_manager.py  message_router.py
prompts/eval_agent/: assert.yaml  generator.yaml  (+1 more)
sandbox/: __init__.py  base.py  commands.py  constants.py  deploy.py  initialize.py  sandbox.ipynb  template.py  tools.py
scripts/: inspect_checkpoint_blob.py
shared/: __init__.py  a2a_utils.py  agent_context.py  agent_tools.py  base_agent.py  cleanup_inverses.py  config.py  constants.py  data_service.py  database.py  database_peewee.py  error_handling.py  eval_runner.py  llm.py  logger.py  mcp_client.py  message_formatter.py  messaging.py  models.py  prompt_loader.py  prompts.py  resource_utils.py  schema.py  schemas.py  state_models.py  test_runner.py  tool_catalog.py  tool_service.py  tools.py
tests/: test_placeholder_validation.py  test_schema_extraction_fix.py  test_type_coercion.py
ui/: __init__.py  streamlit_app.py
worker/: README.md  __init__.py  broker.py
workflow_compiler/: __init__.py  errors.py
workflow_core/: alias_utils.py  code_executor.py  function_blocks.py  graph_builder.py  nodes.py  schema.py  state.py  test_nodes.py  validation.py
(+240 files in other folders)
